[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Clouds_BG/Clouds_BG.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Imgs/UI/icons/shop1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MENU/MENU.gd" type="Script" id=4]
[ext_resource path="res://Resources/Imgs/UI/btn_pressed_texture.tres" type="StyleBox" id=6]
[ext_resource path="res://Resources/Imgs/UI/icons/play1.png" type="Texture" id=7]
[ext_resource path="res://Resources/Imgs/UI/btn_texture.tres" type="StyleBox" id=8]
[ext_resource path="res://Resources/Imgs/UI/bird_laughing.png" type="Texture" id=9]
[ext_resource path="res://Resources/Font/Default.tres" type="DynamicFont" id=10]
[ext_resource path="res://Resources/Imgs/UI/icons/settings1.png" type="Texture" id=11]
[ext_resource path="res://Resources/Imgs/UI/logo.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Bird_laughing.tscn" type="PackedScene" id=15]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="MENU" type="Node"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Bird_laughing" parent="CanvasLayer" instance=ExtResource( 15 )]
position = Vector2( 35, 272 )
frames = SubResource( 6 )
frame = 0
playing = false

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.960784, 1, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
margin_left = 8.0
margin_top = 53.0
margin_right = 136.0
margin_bottom = 203.0
rect_min_size = Vector2( 112, 150 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JB_Logo" type="TextureRect" parent="CanvasLayer/Control/CenterContainer/Menu"]
margin_top = 25.0
margin_right = 128.0
margin_bottom = 89.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/Menu"]
margin_top = 93.0
margin_right = 128.0
margin_bottom = 125.0
custom_constants/separation = 2
alignment = 1

[node name="Play" type="Button" parent="CanvasLayer/Control/CenterContainer/Menu/HBoxContainer"]
margin_left = 14.0
margin_right = 46.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_colors/font_color_disabled = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_hover = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.321569, 0.466667, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
icon = ExtResource( 7 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Button" parent="CanvasLayer/Control/CenterContainer/Menu/HBoxContainer"]
margin_left = 48.0
margin_right = 80.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_colors/font_color_disabled = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_hover = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.321569, 0.466667, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
icon = ExtResource( 2 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="CanvasLayer/Control/CenterContainer/Menu/HBoxContainer"]
margin_left = 82.0
margin_right = 114.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_colors/font_color_disabled = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_hover = Color( 1, 0.321569, 0.466667, 1 )
custom_colors/font_color_pressed = Color( 1, 0.321569, 0.466667, 1 )
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
icon = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds_BG" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/Menu/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/Menu/HBoxContainer/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/Menu/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
